# textify_docs

./: .gitignore  .gitinore  LICENSE  MANIFIST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: main.yml
documents/: .~rd docx.docx  Extrait 20.xlsx  word docx.docx
examples/: proof_of_concept.ipynb
notebooks/: OCR_TATR.ipynb  preprocess_image.ipynb
tests/: test_image_converter.py
textify_docs/: base.py  config.py  document_converter.py  docx_converter.py  image_converter.py  pdf_converter.py  table_detecter.py  table_extracter.py  table_structure_recognizer.py  utils.py  xlsx_converter.py
textify_docs/image_converter/: image_converter.py  image_preprocessing.py
textify_docs/models/:  detection_model.py   structure_recognition_model.py  preprocessing.py  table_transformer.py
textify_docs/tables/: table_detecter.py  table_detection.py  table_extracter.py  table_structure_recognition.py  table_structure_recognizer.py
