[tool.poetry]
name = "textify-docs"
version = "2.1.0"
description = ""
authors = ["Mohamed Boulaich <boulaich.mohamed970@gmail.com>"]
license = "GNU General Public License v3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
numpy = "^2.1.0"
opencv-python = "4.10.0.84"
pillow = "^10.4.0"
pdf2image = "^1.17.0"
python-docx = "^1.1.2"
openpyxl = "^3.1.5"
torch = "^2.4.0"
transformers = "^4.44.2"
pytesseract = "^0.3.13"
torchvision = "0.19.0"
timm = "^1.0.9"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
matplotlib = "^3.9.2"
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
